# ipman

./: .gitignore  404.html  CLAUDE.md  README.md  README.zh-cn.md  RELEASING.md  cliff.toml  index.html  install.sh  mkdocs.yml  pyproject.toml  sitemap.xml  人工TODO事项.md
.claude/: COLLABORATION.md  arch-spec-registry.md  compliance-report.md  current-sprint.md  module-spec-registry.md  settings.local.json  sprint-plan.md  tech-spec-registry.md  test-registry.md  validation-registry.md
.claude/archive/: sprint-0.md  sprint-1.md  sprint-10.md  sprint-11.md  sprint-12.md  sprint-13.md  sprint-2.md  sprint-3.md  sprint-4.md  sprint-5.md  sprint-6.md  sprint-7.md  sprint-8.md  sprint-9.md  sprint-validation.md
.claude/research/: agent-skill-cli-comparison.md  iphub-design.md
.githooks/: pre-commit
.github/workflows/: ci.yml  docs.yml  e2e-docker-legacy.yml  e2e-fast.yml  e2e-full.yml  e2e.yml  publish.yml  sync-rankings.yml
cli-reference/: index.html
docs/: PRD.md  PRD.zh-cn.md  faq.zh-cn.md  installation-guide.zh-cn.md  ip-package-spec.zh-cn.md
docs-src/: cli-reference.md  faq.md  index.md  ip-package-spec.md
docs-src/getting-started/: installation.md  quickstart.md
docs-src/guide/: configuration.md  environments.md  iphub.md  packages.md  security.md  skills.md
docs-src/security/: modes.md  risk-assessment.md
docs-src/zh/: faq.md  index.md
docs-src/zh/getting-started/: installation.md  quickstart.md
docs-src/zh/guide/: security.md
docs/iphub-workflows/: rebuild-index.yml  sync-cnb.yml  update-stats.yml  validate-pr.yml
docs/reports/: ipman-final-summary-zh.md  ipman-openclaw-test-20260323-consolidated-report.md
docs/superpowers/plans/: 2026-03-16-cross-platform-e2e-testing.md  2026-03-16-iphub-ip-format-enhancement.md  2026-03-16-shell-init.md  2026-03-17-local-skill-install.md  2026-03-24-openclaw-bugfix-and-e2e.md  2026-03-27-cli-passthrough-and-symlink-guard.md
docs/superpowers/specs/: 2026-03-16-cross-platform-e2e-testing-design.md  2026-03-16-iphub-ip-format-enhancement-design.md  2026-03-16-shell-init-design.md  2026-03-17-iphub-bot-design.md  2026-03-17-local-skill-install-design.md  2026-03-27-cli-passthrough-and-symlink-guard-design.md
faq/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/configuration/: index.html
guide/environments/: index.html
guide/iphub/: index.html
guide/security/: index.html
guide/skills/: index.html
ip-package-spec/: index.html
scripts/: bump-major.sh  bump-minor.sh  bump-patch.sh  bump.py  pyinstaller-entry.py
search/: search_index.json
security/modes/: index.html
security/risk-assessment/: index.html
src/ipman/: __init__.py
src/ipman/agents/: base.py  claude_code.py  openclaw.py  registry.py
src/ipman/cli/: _common.py  env.py  hub.py  init.py  main.py  pack.py  passthrough.py  skill.py
src/ipman/core/: config.py  environment.py  package.py  resolver.py  security.py  shell_init.py  vetter.py
src/ipman/hub/: client.py  publisher.py  stats.py
src/ipman/utils/: i18n.py  symlink.py
tests/: conftest.py
tests/e2e/: Dockerfile.claude-code  conftest.py  conftest_mock.py  docker-compose.yml  run-e2e.sh  test_agent_session.py  test_env_lifecycle.py  test_hub_integration.py  test_init_order.py  test_openclaw_compat.py  test_openclaw_real.py  test_pack_roundtrip.py  test_publish_workflow.py  test_skill_install.py  test_symlink_integrity.py
tests/e2e-legacy/: Dockerfile.openclaw  run-tests.sh
tests/e2e-legacy/scenarios/: test_hub_search.sh  test_pack_roundtrip.sh
tests/e2e/fixtures/ips/: clean-kit.ip.yaml  with-deps.ip.yaml
tests/e2e/fixtures/skills/openclaw/hello-world/: SKILL.md
tests/e2e/helpers/: agent_manager.py  github_cleanup.py  platform_utils.py  run.py
tests/e2e/mock_clawhub/: clawhub  clawhub.bat  clawhub_mock.py  openclaw_mock.py
tests/e2e/scenarios/: test_env_lifecycle.sh  test_install_security.sh
tests/test_agents/: test_adapters_cli.py
tests/test_cli/: test_env.py  test_hub.py  test_init.py  test_install_hub.py  test_install_ip.py  test_install_security.py  test_main.py  test_pack.py  test_passthrough.py  test_skill.py
tests/test_core/: test_config.py  test_environment.py  test_i18n.py  test_package.py  test_resolver.py  test_security.py  test_shell_init.py  test_symlink.py  test_symlink_guard.py  test_vetter.py
tests/test_hub/: test_client.py  test_publisher.py  test_stats.py
tests/test_integration/: test_security_flow.py
tests/test_performance/: test_benchmarks.py
zh/: index.html
zh/faq/: index.html
zh/getting-started/installation/: index.html
zh/getting-started/quickstart/: index.html
zh/guide/security/: index.html
